Journal: Fix autoscroll on Safari

--- a/projects/midst-press/index.css
+++ b/projects/midst-press/index.css
@@ -91,6 +91,7 @@ html,
 body {
   margin: 0;
   padding: 0;
+  overscroll-behavior: none;
 }
 
 body {
@@ -134,6 +135,7 @@ body {
   display: block;
   width: 100%;
   height: 100%;
+  text-decoration: none;
 }
 
 .site-header h1 .logo-svgs {
@@ -948,7 +950,7 @@ body {
 }
 
 .editor .editable i {
-  padding-right: 5px;
+  padding-right: 1px;
 }
 
 .editable p,
